--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Good proficiency in CSS/HTML. 
   Eperience in WordPress development
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://ryshard.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: Ryshard
 
 # Build settings
