--- a/hexo/gabriel-gh/_config.yml
+++ b/hexo/gabriel-gh/_config.yml
@@ -3,23 +3,26 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ""
-description: ""
+title: Gabriel Garus
+subtitle: "Front-end developer"
+description:
+  "Front end focused developer. Experienced in react/redux environments.
+  Good proficiency in CSS/HTML.
+  Eperience in WordPress development"
 keywords:
-author: John Doe
+author: Gabriel Garus
 language: en
-timezone: ""
+timezone: "UTC"
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: http://example.com
+url: https://ryshard.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
-  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
-  trailing_html: true # Set to false to remove trailing '.html' from permalinks
+  trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
+  trailing_html: false # Set to false to remove trailing '.html' from permalinks
 
 # Directory
 source_dir: source
@@ -66,6 +69,9 @@ index_generator:
   per_page: 10
   order_by: -date
 
+exclude_generators:
+  - index
+
 # Category & Tag
 default_category: uncategorized
 category_map:
@@ -110,3 +116,17 @@ hfc_useref:
   enable: true
   concat: true
   exclude:
+
+hfc_js:
+  enable: true
+  # mangle: true
+  compress:
+
+hfc_css:
+  enable: false
+
+# https://www.npmjs.com/package/hexo-renderer-sass
+node_sass:
+  outputStyle: compressed
+  precision: 5
+  sourceComments: false
